--- a/package.json
+++ b/package.json
@@ -1,16 +1,20 @@
 {
   "dependencies": {
+    "@fastify/cors": "^8.2.0",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "fastify": "^4.13.0",
-    "nodemon": "^2.0.20"
+    "fastify-cors": "^6.1.0",
+    "fastify-socket.io": "^4.0.0",
+    "fastify-websocket": "^4.3.0",
+    "nodemon": "^2.0.20",
+    "socket.io": "^4.6.1"
   },
   "name": "fastify",
   "version": "1.0.0",
   "main": "fastify.js",
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon fastify.js"
