--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "dependencies": {
     "@fastify/cors": "^8.2.0",
+    "@fastify/postgres": "^5.2.0",
     "@socket.io/admin-ui": "^0.5.1",
+    "amqplib": "^0.10.3",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
@@ -18,7 +20,7 @@
   "main": "fastify.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon socket.js"
+    "start": "nodemon reciever.js"
   },
   "author": "",
   "license": "ISC",
