--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "dependencies": {
     "@fastify/cors": "^8.2.0",
     "@fastify/postgres": "^5.2.0",
+    "@hapi/joi": "^17.1.1",
     "@socket.io/admin-ui": "^0.5.1",
     "amqplib": "^0.10.3",
+    "awilix": "^8.0.0",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
@@ -12,6 +14,7 @@
     "fastify-cors": "^6.1.0",
     "fastify-socket.io": "^4.0.0",
     "fastify-websocket": "^4.3.0",
+    "lodash": "^4.17.21",
     "nodemon": "^2.0.20",
     "socket.io": "^4.6.1"
   },
